[project]
name = "comfyui-decadetw-auto-prompt-llm"
description = "NODES: Auto-LLM-Text-Vision, Auto-LLM-Text, Auto-LLM-Vision"
version = "1.20240826.1"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/xlinx/ComfyUI-decadetw-auto-prompt-llm"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "xxlinxx"
DisplayName = "ComfyUI-decadetw-auto-prompt-llm"
Icon = "https://www.decade.tw/wp-content/uploads/2021/09/cropped-DECADE512-150x150.png"
